    o 'ask' argument is respected when in non-interactive mode (@lshep #9)

    o valid() returns TRUE for valid Bioconductor installations otherwise,
    it prints a report of out-of-date and/or too new packages

MINOR CHANGES

    o updated unit tests for install()

    o when changing versions via 'install(version = "x.x")', Bioconductor
    packages to be up or down-graded are now enumerated

CHANGES IN VERSION 1.31.0
-------------------------

USER VISIBLE CHANGES

    o install() '...' arguments must be named.

CHANGES IN VERSION 1.30.0
-------------------------

NEW FEATURES

    o package renamed to BiocManager

    o install() supports github repositories using the remotes
    package, rather than devtools. This change should be transparent
    to end users. (@PeteHaitch, #4)

    o functions renamed to the following: biocLite > install;
    biocInstallRepos > repositories; biocValid > valid;
    biocVersion > version

    o functions removed: biocases_group, biocUpdatePackages, isDevel,
    useDevel, *_group

    o available() enables package discovery via grep()

    o Removed support for MRAN (Microsoft R) archives.

CHANGES IN VERSION 1.28.0
-------------------------

NEW FEATURES

    o biocLite() supports full URLs, e.g., to archived Bioconductor
    packages.

    o Support MRAN (Microsoft R) archives.

CHANGES IN VERSION 1.24.0
-------------------------

NEW FEATURES

    o biocLite() uses lib.loc= to find devtools, reports more
    informatively why devtools fails to load

    o biocLite() only offers to update non-masked packages

    o biocLite() reports when packages in unwriteable directories are
    out-of-date, but does not try (and fail) to update them.

    o isDevel() returns TRUE if the version of BiocInstaller
    corresponds to the development version of Bioconductor.

CHANGES IN VERSION 1.20.0
-------------------------

BUG FIXES

    o biocLite() uses lib.loc when calling update.packages

CHANGES IN VERSION 1.18.0